[tool.poetry]
name = "first-agent"
version = "0.1.0"
description = ""
authors = ["Manish Shivanandhan <manish@manalath.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^1.1.3"
fastapi = "^0.124.0"
uvicorn = "^0.38.0"
langchain-openai = "^1.1.1"
dotenv = "^0.9.9"

[tool.poetry.scripts]
start = "server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
